2007-07-10  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c (regex_new), (regex_resolve):
	* gtksourceview/gtksourcelanguage-parser-2.c (expand_regex_vars),
	(expand_regex_delimiters), (expand_regex):
	Use static variables for often used regexes instead of using
	g_regex_match_simple().
	Use G_REGEX_NEWLINE_LF with all regexes to workaround bug #455640.

	* gtksourceview/language-specs/changelog.lang:
	parse little more dates, do not break when empty lines are not actually
	empty but contain whitespace.

2007-07-10  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcestylescheme.c: add description getter.

2007-07-09  Yevgen Muntyan  <muntyan@tamu.edu>

	* docs/reference/tmpl/stylescheme.sgml:
	document "selection" and "selection-unfocused" styles.

	* gtksourceview/language-specs/c.lang:
	do not highlight "#if0" as "#if 0".

2007-07-06  Paolo Borelli  <pborelli@katamail.com>

	* docs/reference/language-reference.sgml: lang format
	specification updates by thelema@swbell.net.

2007-07-05  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/testdark.xml:
	* gtksourceview/gtksourcestylescheme.c: renamed "text-selected"
	to "selection", and added "selection-unfocused".

	* gtksourceview/language-specs/lua.lang:
	removed <!DOCTYPE language SYSTEM "language.dtd"> bit.

2007-07-05  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/ruby.lang: many improvements
	by Kristoffer Lundén. Bug #419381.

=== gtksourceview 1.90.2 ===

2007-07-03  Paolo Borelli  <pborelli@katamail.com>

	* NEWS:
	* README:
	* configure.ac:

	GtkSourceView 1.90.2 released.

2007-07-03  Paolo Borelli  <pborelli@katamail.com>

	* acinclude.m4: glib 2.13.6 is good enough for gregex.

2007-07-03  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/haddock.lang:
	* gtksourceview/language-specs/haskell.lang:
	* gtksourceview/language-specs/haskell-literate.lang:
