@@ -1,3 +1,8 @@
+2007-07-12  Paolo Borelli  <pborelli@katamail.com>
+
+	* gtksourceview/gtksourceview-utils.c: look in the correct dir
+	for legacy lang files.
+
 2007-07-10  Yevgen Muntyan  <muntyan@tamu.edu>
 
 	* gtksourceview/gtksourcecontextengine.c (regex_new), (regex_resolve):
